Fix the z-index of the navigation menu.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,6 +7,7 @@
 
   // Positioning context for the mobile navigation icon
   position: relative;
+  z-index: 1;
 }
 
 .site-title {
